# defmt-errors

./: .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  rust-toolchain.toml
defmt-errors-derive/: CHANGELOG.md  Cargo.toml
defmt-errors-derive/examples/: basic.rs
defmt-errors-derive/src/: lib.rs
src/: lib.rs
